--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
         </article>
       </div>
       <div class="footer">
-        &copy; Copryright <span>EGATOR</span> All Right Reseved
+        &copy; Copryright <span>CodingWithAbdou</span> All Right Reseved
       </div>
     </footer>
   </body>
